--- a/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
+++ b/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Apply JavaScript example</title>
+  <script>
+  </script>
   </head>
   <body>
     <button>Click me</button>
